fixed input shadows on iOS

--- a/src/global-styles/custom.scss
+++ b/src/global-styles/custom.scss
@@ -39,6 +39,7 @@ $dark-mode-card-bg: #2A3244;
     position: relative;
     background: #ffffff;
     box-shadow: 0px 10px 30px rgba(209, 213, 223, 0.5);
+    -webkit-appearance: none; //iOS messes up forms - See: https://stackoverflow.com/questions/10757146/iphone-ios-will-not-display-box-shadow-properly
     border-radius: 1rem;
     height: calc(2.25em + 1.125rem + 2px);
     padding: 0.5rem 1.5rem;
